tdf#104893 vcl opengl: fix assert failure when starting chart editing

OpenGLContext::prepareForYield() assumed that in case we have a current
context, then it's the last one, but that's not the case for chart windows
since commit 78b100ec9cb0db2f7b33ece5ad3287a67a37246f (only init the OpenGL
context if we need it, 2016-06-07), which creates an OpenGLContext instance
(which is then the last one in the context list) but explicitly doesn't
initialize it (so that it would become the current one).

Fix the problem by resetting not the last but the last current context.

(cherry picked from commit 2a6171ed6fb85b3419dcf5cf1346cf1eec447987)

Change-Id: Ie0e96927473290590cd6333e5cdcb7daa009431b
Reviewed-on: https://gerrit.libreoffice.org/54516
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit 014a573a05bc69e0883a9e5fccdc7bed72b0a62e)